Added exported-from-SketchUp-as-PDF-converted-to-SVG file to notes.org

--- a/notes.org
+++ b/notes.org
@@ -76,3 +76,7 @@
                                     |  FSR  +-----------------
                                     +-------+
   #+END_SRC
+
+  or, represented in SketchUp:
+
+    [[file:images/coffee-scale.svg]]
